# landscape

./: .coverage  .env.example  .gitattributes  .gitignore  ACRE-Multifamily-Renovations.xlsm  AGENTS.md  AI_HANDOFF.md  ARCHITECTURE.md  BRANCH_COMPARISON_ANALYSIS.md  BUDGET_CATEGORY_HIERARCHY_IMPLEMENTATION_STATUS.md  BUDGET_CATEGORY_PHASE_5_COMPLETION.md  BUDGET_GRID_UI_IMPROVEMENTS.md  CC_VERIFY_ACQUISITION_CASHFLOW.md  CC_VERIFY_ACQUISITION_PICKLIST.md  CLAUDE.md  CLAUDE_CODE_PROMPT_OTHER_MACHINE.md  CLEANUP_SUMMARY.md  COMPONENT_STYLING_AUDIT_RESULTS.md  COREUI-PROTOTYPE.md  COREUI_COLOR_REFERENCE.md  CUSTOM_BUDGET_GRID_IMPLEMENTATION.md  DECISIONS.md  DISCOVERY_Loan_Sizing_Audit_Report.md  DOCUMENTATION_UPDATE_SUMMARY.md  FEEDBACK_IMPLEMENTATION_SUMMARY.md  FEEDBACK_QUICK_START.md  FEEDBACK_SETUP_CHECKLIST.md  HANDOFF_2026-02-20.md  HANDOFF_2026-03-09.md  INDUSTRIAL_DEPENDENCY_TRACE.md  INLINE_BENCHMARK_EDITING_IMPLEMENTATION.md  KNOWLEDGE_IMPLEMENTATION.md  KNOWN_ISSUES.md  LANDSCAPER_MARKET_DATA_INGESTION_SPEC.md  LANDSCAPER_USER_GUIDE_v1.docx  LANDSCAPE_ARCHITECTURE.md  LAND_DEVELOPMENT_DEPENDENCY_TRACE.md  Landscape_Project_Instructions_v2.3.md  Landscaper_Intelligence_v1_Audit_QA.docx  MIGRATION_013_TAB_ROUTING_FIX.md  (+82 more)
.claude/: branch-labels.json  launch.json  sessions.json  settings.local.json  start-next.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Documentation/: App-Development-Status.md  Land-Use-Management-System.md  example-todo-tracking.tsx  gis_implementation_ai_first.md  maplibre_integration_ai_first.md
backend/: .coveragerc  .env.example  .gitignore  ADMIN_ACCESS.md  DJANGO_BACKEND_COMPLETE.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  PHASE6_COMPLETION.md  PHASE7_COMPLETION.md  Procfile  README.md  README_FRONTEND_INTEGRATION.md  README_PHASE3.md  README_PHASE4.md  README_PHASE5.md  README_TESTING.md  TESTING_GUIDE.md  conftest.py  nixpacks.toml  phase0_comps_schema.py  phase0_discovery.py  phase0_platform_intelligence.py  pytest.ini  railway.json  requirements.txt  run_migration.py  test_finance_structure_api.py  tests_e2e_workflows.py  tests_performance.py
data/: prototype-notes.json  red_valley_unit_costs.csv
docs/: ALPHA_HELP_API_AUDIT_REPORT.md  ALPHA_ONBOARDING_SYSTEM.md  APP_BUTTON_INVENTORY.md  ASSUMPTIONS_UI_GUIDE.md  ASSUMPTIONS_UI_IMPLEMENTATION_SUMMARY.md  BUDGET_FIELD_EXPANSION_GUIDE.md  BUDGET_FIELD_EXPANSION_IMPLEMENTATION.md  BUDGET_FIELD_TESTING_GUIDE.md  BUDGET_LAYOUT_FIXES_v2.5.md  BUDGET_LAYOUT_FIXES_v2.6.md  CAP_RATE_DIAGNOSIS.md  (+80 more)
services/financial_engine_py/: .gitignore  INSTALLATION_COMPLETE.md  MIGRATION_STATUS.md  README.md  financial_engine  pyproject.toml  setup.sh
services/financial_engine_py/financial_engine/: __main__.py  cli.py  config.py  models.py
services/financial_engine_py/financial_engine/core/: __init__.py  metrics.py
services/financial_engine_py/financial_engine/waterfall/: __init__.py  engine.py  formulas.py  irr.py
services/financial_engine_py/tests/: conftest.py  excel_waterfall_utils.py  test_metrics.py  test_waterfall.py  test_waterfall_excel.py  verify_waterfall_from_excel.py
services/market_agents/: CC_PROMPT_research_agents_setup.md  CC_PROMPT_round2_agents_setup.md  README.md  pyproject.toml
services/market_agents/market_agents/: __init__.py  base_agent.py  config.py  discord.py  orchestrator.py
services/market_agents/market_agents/agents/: __init__.py  base_research_agent.py  brokerage_research_agent.py  census_bps_agent.py  construction_cost_agent.py  crefc_agent.py  fred_agent.py  hud_agent.py  kbra_agent.py  mba_agent.py  naiop_agent.py  trepp_agent.py  uli_agent.py  umich_sentiment_agent.py
services/market_ingest_py/: README.md  pyproject.toml  requirements.txt
services/market_ingest_py/market_ingest/: __init__.py  bls_client.py  cbsa_lookup.py  census_client.py  config.py  db.py  fhfa_client.py  fred_client.py  geo.py  geo_bootstrap.py  normalize.py  runner.py  umich_client.py
(+4675 files in other folders)
