[tool.poetry]
name = "market-agents"
version = "0.1.0"
description = "Landscape Overnight Market Intelligence Agents"
authors = ["Landscape AI <engineering@landscape.ai>"]
readme = "README.md"
packages = [{ include = "market_agents" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"
psycopg2-binary = "^2.9.10"
tenacity = "^8.3.0"
pydantic = "^2.9.2"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
beautifulsoup4 = "^4.12.3"
pdfplumber = "^0.11.0"

# Sibling package for reuse
market-ingest = { path = "../market_ingest_py", develop = true }

[tool.poetry.scripts]
market-agents = "market_agents.orchestrator:main"
fred-agent = "market_agents.agents.fred_agent:run_standalone"
umich-agent = "market_agents.agents.umich_sentiment_agent:run_standalone"
test-discord = "market_agents.discord:test_send"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
