[tool.poetry]
name = "market-ingest"
version = "0.1.0"
description = "Landscape Market Analysis Engine (v1)"
authors = ["Landscape AI <engineering@landscape.ai>"]
readme = "README.md"
packages = [{ include = "market_ingest" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"
psycopg2-binary = "^2.9.10"
tenacity = "^8.3.0"
pydantic = "^2.9.2"
loguru = "^0.7.2"
pandas = { version = "^2.2.3", optional = true }

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.scripts]
market-ingest = "market_ingest.runner:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
